# OpencvAsExternalProject

./: CmakeLists.txt
opencv/: CMakeLists.txt
